--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "miladrahimi/larajwt": "2.*"
+        "jcarlosr/larajwt": "2.5.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
